hotfix: places-fix title section alignment

--- a/blocks/places/__heart-button/places__heart-button.css
+++ b/blocks/places/__heart-button/places__heart-button.css
@@ -3,6 +3,8 @@
   outline: none;
   border: none;
   background-color: transparent;
+  padding: 0;
+  margin: 0;
 }
 
 .places__heart-button:hover {
