--- a/blocks/places/__heart/places__heart.css
+++ b/blocks/places/__heart/places__heart.css
@@ -3,5 +3,5 @@
   width: 20.76px;
   height: 18.13px;
   margin: 0;
-  padding: 0 0 0 15px;
+  padding: 0;
 }
