--- a/blocks/places/__title-section/places__title-section.css
+++ b/blocks/places/__title-section/places__title-section.css
@@ -1,10 +1,10 @@
 
 .places__title-section {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   max-width: 246px;
-  padding: 25px 0 31px;
+  padding: 25px 15px 31px 21px;
   margin: 0 auto;
   
 }
